# ml-edge-getting-started

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
examples/01_TicTacToe_RL_Tensorflow/: 01_TicTacToeRLLIB.ipynb
examples/01_TicTacToe_RL_Tensorflow/tictactoe/: game.py  heuristics.py  tictactoe.py
examples/02_BoxMeasurementsWithLandmarks/: 01_PredictingBoxMeasurements.ipynb
examples/02_BoxMeasurementsWithLandmarks/code/: dataset.py
examples/02_BoxMeasurementsWithLandmarks/data/: 14452887855_fa84699bea_o.csv  2383629452_31fff7e233_o.csv  3022308437_e227294aff_o.csv  3466702375_48b4775685_o.csv  4702362532_fee1792c77_o.csv  6702162677_a9bc207d41_o.csv  6771403075_a17cfe60cb_o.csv  7029921061_8db602f662_o.csv  9039389383_a499ebb2c5_o.csv
models/01_YoloV5/01_Pytorch/processing_cpp/: CMakeLists.txt  convert_img.py
models/01_YoloV5/01_Pytorch/processing_cpp/include/: dlrclient.hpp  processor.hpp
models/01_YoloV5/01_Pytorch/processing_cpp/src/: processor.cc  test.cc
sagemaker_edge_manager_agent_docker/: README.md  run_agent.sh
sagemaker_edge_manager_agent_docker/docker/: Dockerfile  build.sh
samples/onnx_accelerator_sample1/: .gitignore  .projenrc.py  Greengrass.md  IoTJobs.md  README.md  app.py  cdk.json  requirements-dev.txt  requirements.txt
samples/onnx_accelerator_sample2/: README.md
tutorials/: 01_ImageClassificationPytorchResnet18.ipynb  02_TicTacToeTF_RL.ipynb  03_ObjectDetectionPytorchYolov5.ipynb  04_SageMakerEdgeManager.ipynb  05_CompileTF2.4DetectionModelsWithNeo.ipynb  05_SageMakerEdgeManager-Lightweight-Deployment.ipynb  06_CompileTF1.5DetectionModelsWithNeo.ipynb  07_Wav2vec2ONNX.ipynb
tutorials/app/: edge_agent_utils.py
(+90 files in other folders)
